[package]
name = "good-morning-chan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.43.0"
shuttle-serenity = "0.43.0"
tokio = "1.26.0"
tracing = "0.1.37"
poise = { git = "https://github.com/kangalioo/poise", rev = "9ebc7b5" }
thiserror = "1.0.30"
rand = "0.8.5"